--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,5 @@ edition = "2024"
 
 [dependencies]
 num-traits = "0.2.19"
+parking_lot = { version = "0.12.4", features = ["deadlock_detection"] }
 x11rb = "0.13.2"
